# aas-core-testdatagen

./: CONTRIBUTING.rst  README.rst  pyproject.toml
dev/: pyproject.toml
dev/continuous_integration/: check_init_and_pyproject_consistent.py  precommit.py  pylint.rc
dev/dev_scripts/: common.py  download_latest_aas_core_meta.py  download_latest_aas_core_meta_v3_1.py  fuzz_pattern_verification_functions.py  regenerate_test_data.py  update_all.py  verify_test_data_with_sdk.py  zip_test_data.py
dev/test_data/meta_model/: v3_1.py  v3_2.py
dev/test_data/test_generation/v3_1/Json/Expected/AdministrativeInformation/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/AnnotatedRelationshipElement/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/AssetAdministrationShell/: maximal.json  minimal.json
dev/test_data/test_generation/v3_1/Json/Expected/BasicEventElement/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/Blob/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/Capability/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/ConceptDescription/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/EmbeddedDataSpecification/: minimal.json
dev/test_data/test_generation/v3_1/Json/Expected/Entity/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/Environment/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/EventPayload/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/Extension/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/File/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/MultiLanguageProperty/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/Operation/: maximal.json
dev/test_data/test_generation/v3_1/Json/Expected/Property/: maximal.json
dev/tests/: test_generation.py  test_xmling.py  test_xs_typing.py
(+8568 files in other folders)
