[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aas-core-testdatagen-dev"
version = "0.0.1"

description = "Develop aas-core-testdatagen."
requires-python = ">=3.10"

dependencies = [
  "black==25.12.0",
  "mypy==1.19.1",
  "pylint==4.0.4",
  "hypothesis==6.148.8",
  "requests==2.32.4",
  "types-requests==2.32.4.20260107",
  "tomli; python_version < '3.11'",
]

[tool.setuptools.packages.find]
include = ["continuous_integration", "dev_scripts", "tests"]
exclude = ["test_data"]

# NOTE (mristin):
# We put the configuration of mypy and pylint in separate files as it is a nightmare
# to configure them with pyproject.toml not living in the current working directory
# which is the repository root.
